Se creo el menu

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Roger Armando Chan Ac",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "inquirer": "^7.3.3"
   }
 }
