--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "uuid": "^10.0.0"
   }
 }
